cambios visuales, por verificar

--- a/assets/css/cinematic-styles.css
+++ b/assets/css/cinematic-styles.css
@@ -1,4 +1,4 @@
-@import url("fontawesome-all.min.css");
+﻿@import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 
 :root {
